2006-09-04  Christian Persch  <chpe@cvs.gnome.org>

	* src/fe-gnome/conversation-panel.c:
	* src/fe-gnome/xtext.c: 
	* src/fe-gnome/xtext.h:
	  - Fix PRIMARY selection handling. Bug #351272.

2006-09-03  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/irc-network-editor.c:
	  - Fix ordering of autojoin channels with keys. Bug #346987.

2006-09-01  Christian Persch  <chpe@cvs.gnome.org>

	* src/fe-gnome/fe-gnome.c: (fe_open_url):
	  - Fix stupid argument transposition bug from patch from bug #353740.

2006-09-01  Christian Persch  <chpe@cvs.gnome.org>

	* src/common/dbus/dbus-client.c:
	* src/common/xchat.h:
	  - Fix builddir != srcdir build due to crappy xchat upstream build
	    system. Bug #353750.

2006-09-01  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:
	* plugins/autoaway/gscreensaver.c: (get_gs_has_ipc),
	(init_gs_connection), (close_gs_connection):
	* src/common/Makefile.am:
	  - Reuse ENABLE_DBUS define, and eliminate USE_DBUS. Bug #353747.

2006-08-31  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:
	* src/fe-gnome/about.c: (about_email_hook), (about_url_hook),
	(show_about_dialog):
	  - Don't define the hook functions with recent libgnomeui,
	    since it provides them for us.
	* src/fe-gnome/fe-gnome.c: (fe_open_url):
	  - Use gnome_url_show_on_screen, bug #353740.

Thu Aug 31 21:58:23 CEST 2006  Guillaume Desmottes <cass@skynet.be>

	* data/xchat-gnome.1:
	* NEWS:
	  - Manpage refactoring.
	  - Add --existing documentation.

Thu Aug 31 16:58:26 CEST 2006  Xavier Claessens <xclaesse@gmail.com>

	* src/common/dbus/example.py:
	* src/common/dbus/Makefile.am:
	* src/common/dbus/url_handler.schemas.in:
	* src/common/dbus/dbus-plugin.c:
	* src/common/dbus/dbus-client.c:
	* src/common/dbus/example.c:
	* src/common/dbus/README:
	* src/common/dbus/remote-object.xml:
	* src/fe-gnome/fe-gnome.c:
	* configure.ac:
	  - Rename D-Bus service to org.gnome.Xchat.
	    object path is now /org/gnome/Xchat/Remote with interfaces